# snowy-bg-remover

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: SETUP.md  background-removal-cli-research.md  emote-cutout-lessons.md  model-registry.md
src/snowy_bg_remover/: __init__.py  alpha.py  atomic_write.py  background.py  cli.py  contracts.py  decontaminate.py  engine.py  explain.py  framing.py  image_io.py  masks.py  model_manager.py  model_specs.py  refine.py
src/snowy_bg_remover/adapters/: __init__.py  base.py  onnx.py  registry.py  torch_birefnet.py
tests/: test_alpha.py  test_background.py  test_decontaminate.py  test_engine.py  test_framing.py  test_masks.py  test_model_manager.py  test_refine.py
