[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowy-bg-remover"
version = "0.1.0"
description = "Local-first character/emote background removal CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Snowy" }
]
dependencies = [
  "numpy>=1.26",
  "onnxruntime>=1.18",
  "Pillow>=10.0",
  "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
cutout = "snowy_bg_remover.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
